--- a/morus_gazebo/package.xml
+++ b/morus_gazebo/package.xml
@@ -52,6 +52,8 @@
   <build_depend>gazebo_msgs</build_depend>
   <build_depend>gazebo_ros</build_depend>
   <build_depend>tf</build_depend>
+  <build_depend>morus_uav_ros_msgs</build_depend>
+  <run_depend>morus_uav_ros_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
