fixed namespaces issues

--- a/morus_control/config/morus_control.yaml
+++ b/morus_control/config/morus_control.yaml
@@ -1,4 +1,4 @@
-morus:
+morus_uav:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
