--- a/morus_gazebo/CMakeLists.txt
+++ b/morus_gazebo/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 2.8.3 FATAL_ERROR)
 project(morus_gazebo)
 
 ## Find catkin macros and libraries
@@ -20,27 +20,27 @@ find_package(catkin REQUIRED COMPONENTS
 ##########################
 ## Gazebo related stuff ##
 ##########################
+if (FALSE)#${gazebo_VERSION_MAJOR} LESS 6
+  include (FindPkgConfig)
+  if (PKG_CONFIG_FOUND)
+    pkg_check_modules(XML libxml-2.0)
+    pkg_check_modules(OGRE OGRE)
+    pkg_check_modules(OGRE-Terrain OGRE-Terrain)
+  else()
+    message(FATAL_ERROR "pkg-config is required; please install it")
+  endif()
 
-include (FindPkgConfig)
-if (PKG_CONFIG_FOUND)
-  pkg_check_modules(XML libxml-2.0)
-  pkg_check_modules(OGRE OGRE)
-  pkg_check_modules(OGRE-Terrain OGRE-Terrain)
-else()
-  message(FATAL_ERROR "pkg-config is required; please install it")
+  # Depend on system install of Gazebo
+  
+  find_package(Boost REQUIRED COMPONENTS thread)
+
+  execute_process(COMMAND
+    pkg-config --variable=plugindir OGRE
+    OUTPUT_VARIABLE OGRE_PLUGIN_PATH
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
 endif()
-
-# Depend on system install of Gazebo
 find_package(gazebo REQUIRED)
-find_package(Boost REQUIRED COMPONENTS thread)
-
-execute_process(COMMAND
-  pkg-config --variable=plugindir OGRE
-  OUTPUT_VARIABLE OGRE_PLUGIN_PATH
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-
-
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
@@ -167,18 +167,18 @@ include_directories(
 #   ${catkin_LIBRARIES}
 # )
 
-link_directories(${GAZEBO_LIBRARY_DIRS} ${OGRE_LIBRARY_DIRS})
-include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIR} ${GAZEBO_INCLUDE_DIRS} ${OGRE_INCLUDE_DIRS} ${OGRE-Terrain_INCLUDE_DIRS})
-
+link_directories(${GAZEBO_LIBRARY_DIRS})# ${OGRE_LIBRARY_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})# ${Boost_INCLUDE_DIR}  ${OGRE_INCLUDE_DIRS} ${OGRE-Terrain_INCLUDE_DIRS})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
 add_library(${PROJECT_NAME}_gm_status plugins/gm_status/GMStatus.cpp)
-target_link_libraries(${PROJECT_NAME}_gm_status ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}_gm_status ${roscpp_LIBRARIES} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
 
 #add_library(${PROJECT_NAME}_get_pose plugins/get_pose/get_pose.cpp)
 #target_link_libraries(${PROJECT_NAME}_get_pose  ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
 
 add_library(${PROJECT_NAME}_battery_status plugins/battery_status/BatteryStatus.cpp)
-target_link_libraries(${PROJECT_NAME}_battery_status  ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
+target_link_libraries(${PROJECT_NAME}_battery_status  ${roscpp_LIBRARIES} ${catkin_LIBRARIES} ${GAZEBO_LIBRARIES})
 #############
 ## Install ##
 #############
