--- a/morus_gazebo/package.xml
+++ b/morus_gazebo/package.xml
@@ -39,8 +39,10 @@
   <!--   <run_depend>message_runtime</run_depend> -->
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
+  
   <buildtool_depend>catkin</buildtool_depend>
-  <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>cmake_modules</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>message_generation</build_depend>
@@ -53,6 +55,7 @@
   <build_depend>gazebo_ros</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>morus_uav_ros_msgs</build_depend>
+  
   <run_depend>morus_uav_ros_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
