--- a/morus_control/package.xml
+++ b/morus_control/package.xml
@@ -19,6 +19,9 @@
 
   <build_depend>cmake_modules</build_depend>
   <build_depend>controller_spawner</build_depend>
+  <build_depend>morus_uav_ros_msgs</build_depend>
+  
+  <run_depend>morus_uav_ros_msgs</run_depend>
   <run_depend>controller_spawner</run_depend>
   <run_depend>cmake_modules</run_depend>
 
