--- a/morus_control/config/morus_control.yaml
+++ b/morus_control/config/morus_control.yaml
@@ -4,20 +4,20 @@ morus:
     type: joint_state_controller/JointStateController
     publish_rate: 50
 
-  # Angle of Tilt Controllers ---------------------------------
-  angle_tilt_0_controller:
+  # Angle of Wing Controllers ---------------------------------
+  angle_wing_0_controller:
     type: effort_controllers/JointPositionController
-    joint: tilt_0_joint
-    pid: {p: 5.0, i: 1.0, d: 0.25, i_clamp_max: 100.0, i_clamp_min: -100.0}
-  angle_tilt_1_controller:
+    joint: wing_0_joint
+    pid: {p: 0.001, i: 0.0001, d: 0.01, i_clamp_max: 100.0, i_clamp_min: -100.0}
+  angle_wing_1_controller:
     type: effort_controllers/JointPositionController
-    joint: tilt_1_joint
-    pid: {p: 5.0, i: 1.0, d: 0.25, i_clamp_max: 100.0, i_clamp_min: -100.0}
-  angle_tilt_2_controller:
+    joint: wing_1_joint
+    pid: {p: 0.001, i: 0.0001, d: 0.01, i_clamp_max: 100.0, i_clamp_min: -100.0}
+  angle_wing_2_controller:
     type: effort_controllers/JointPositionController
-    joint: tilt_2_joint
-    pid: {p: 5.0, i: 1.0, d: 0.25, i_clamp_max: 100.0, i_clamp_min: -100.0}
-  angle_tilt_3_controller:
+    joint: wing_2_joint
+    pid: {p: 0.001, i: 0.0001, d: 0.01, i_clamp_max: 100.0, i_clamp_min: -100.0}
+  angle_wing_3_controller:
     type: effort_controllers/JointPositionController
-    joint: tilt_3_joint
-    pid: {p: 5.0, i: 1.0, d: 0.25, i_clamp_max: 100.0, i_clamp_min: -100.0}
+    joint: wing_3_joint
+    pid: {p: 0.001, i: 0.0001, d: 0.01, i_clamp_max: 100.0, i_clamp_min: -100.0}
