--- a/morus_control/config/morus_control.yaml
+++ b/morus_control/config/morus_control.yaml
@@ -8,16 +8,16 @@ morus:
   angle_tilt_0_controller:
     type: effort_controllers/JointPositionController
     joint: tilt_0_joint
-    pid: {p: 8.0, i: 0.1, d: 6.0, i_clamp_max: 1.0, i_clamp_min: -1.0}
+    pid: {p: 100., i: 15., d: 50., i_clamp_max: 1.0, i_clamp_min: -1.0}
   angle_tilt_1_controller:
     type: effort_controllers/JointPositionController
     joint: tilt_1_joint
-    pid: {p: 8.0, i: 0.1, d: 6.0, i_clamp_max: 0.0, i_clamp_min: 0.0}
+    pid: {p: 100., i: 15., d: 50., i_clamp_max: 1.0, i_clamp_min: -1.0}
   angle_tilt_2_controller:
     type: effort_controllers/JointPositionController
     joint: tilt_2_joint
-    pid: {p: 8.0, i: 0.1, d: 6.0, i_clamp_max: 1.0, i_clamp_min: -1.0}
+    pid: {p: 100., i: 15., d: 50., i_clamp_max: 1.0, i_clamp_min: -1.0}
   angle_tilt_3_controller:
     type: effort_controllers/JointPositionController
     joint: tilt_3_joint
-    pid: {p: 8.0, i: 0.1, d: 6.0, i_clamp_max: 0.0, i_clamp_min: 0.0}
+    pid: {p: 100., i: 15., d: 50., i_clamp_max: 1.0, i_clamp_min: -1.0}
