Added PID compensators and configuration

--- a/morus_control/config/SmcMmcuavPositionCtlParams.cfg
+++ b/morus_control/config/SmcMmcuavPositionCtlParams.cfg
@@ -14,14 +14,10 @@ gen.add("z_kp", double_t, 0, "Z ctl PID P gain", 4, 0, 100)
 gen.add("z_ki", double_t, 0, "Z ctl PID I gain", 0.0, 0, 100)
 gen.add("z_kd", double_t, 0, "Z ctl PID D gain", 1.0, 0, 100)
 
-gen.add("z_comp_b0", double_t, 0, "Z compensator b0", 0.3, -10, 10)
-gen.add("z_comp_b1", double_t, 0, "Z compensator b1", -0.299, -10, 10)
-gen.add("z_comp_a1", double_t, 0, "Z compensator a1", 1, -10, 10)
-gen.add("z_comp_gain", double_t, 0, "Z compensator gain", 0.05, 0, 100)
+gen.add("z_lambda", double_t, 0, "Z ctl compensator lambda", 0.1, 0, 10)
+gen.add("vz_lambda", double_t, 0, "VZ ctl compensator lambda", 2, 0, 50)
 
-gen.add("vz_comp_b0", double_t, 0, "VZ compensator b0", 1, -10, 10)
-gen.add("vz_comp_b1", double_t, 0, "VZ compensator b1", -0.998, -10, 10)
-gen.add("vz_comp_a1", double_t, 0, "VZ compensator a1", 1, -10, 10)
+gen.add("z_comp_gain", double_t, 0, "Z compensator gain", 0.05, 0, 50)
 gen.add("vz_comp_gain", double_t, 0, "VZ compensator gain", 100, 0, 300)
 
 gen.add("switch_eps", double_t, 0, "Switching constant", 0.01, 0, 1)
