Added roll / pitch SMC status message and reconfigure

--- a/morus_control/config/SmcUavHeightCtlParams.cfg
+++ b/morus_control/config/SmcUavHeightCtlParams.cfg
@@ -5,7 +5,6 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-
 gen.add("vz_kp", double_t, 0, "VZ ctl PID P gain", 40, 0, 100)
 gen.add("vz_ki", double_t, 0, "VZ ctl PID I gain", 0.1, 0, 100)
 gen.add("vz_kd", double_t, 0, "VZ ctl PID D gain", 0.0, 0, 100)
@@ -27,4 +26,4 @@ gen.add("vz_beta", double_t, 0, "VZ switch gain", 30, 0, 200)
 gen.add("z_ff", double_t, 0, "Z feed-forward gain", 1, 0, 10)
 gen.add("vz_ff", double_t, 0, "VZ feed-forward gain", 8, 0, 50)
 
-exit(gen.generate(PACKAGE, "morus_control", "SmcMmcuavPositionCtlParams"))
+exit(gen.generate(PACKAGE, "morus_control", "SmcUavHeightCtlParams"))
