--- a/morus_msgs/CMakeLists.txt
+++ b/morus_msgs/CMakeLists.txt
@@ -7,7 +7,8 @@ add_message_files(
   FILES
   MotorSpeed.msg
   PIDController.msg
-  SMCStatus.msg
+  SMCStatusHeight.msg
+  SMCStatusAttitude.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs)
