Tuned height inner loop, removed real derivative

--- a/morus_control/config/SmcUavHeightCtlParams.cfg
+++ b/morus_control/config/SmcUavHeightCtlParams.cfg
@@ -33,7 +33,11 @@ gen.add("vz_comp_gain", double_t, 0, "VZ compensator gain", 100, 0, 300)
 gen.add("yaw_comp_gain", double_t, 0, "Yaw compensator gain", 0.05, 0, 10)
 gen.add("yaw_rate_comp_gain", double_t, 0, "Yaw rate compensator gain", 0.1, 0, 100)
 
-gen.add("switch_eps", double_t, 0, "Switching constant", 0.01, 0, 1)
+gen.add("z_eps", double_t, 0, "Z Switching constant", 0.01, 0, 1)
+gen.add("vz_eps", double_t, 0, "VZ Switching constant", 0.01, 0, 1)
+gen.add("yaw_eps", double_t, 0, "Yaw Switching constant", 0.01, 0, 1)
+gen.add("yaw_rate_eps", double_t, 0, "Yaw rate Switching constant", 0.01, 0, 1)
+
 gen.add("z_beta", double_t, 0, "Z switch gain", 0.01, 0, 1)
 gen.add("vz_beta", double_t, 0, "VZ switch gain", 30, 0, 200)
 
