Tuned attitude parameters

--- a/morus_control/config/SmcUavAttitudeCtlParams.cfg
+++ b/morus_control/config/SmcUavAttitudeCtlParams.cfg
@@ -19,7 +19,9 @@ gen.add("rate_lambda", double_t, 0, "Roll / pitch rate ctl compensator lambda", 
 gen.add("comp_gain", double_t, 0, "Roll / pitch compensator gain", 0.05, 0, 10)
 gen.add("rate_comp_gain", double_t, 0, "VZ compensator gain", 0.5, 0, 50)
 
-gen.add("switch_eps", double_t, 0, "Switching constant", 0.01, 0, 1)
+gen.add("eps", double_t, 0, "Angle switching constant", 0.01, 0.01, 1)
+gen.add("rate_eps", double_t, 0, "Angle rate switching constant", 0.01, 0.01, 1)
+
 gen.add("beta", double_t, 0, "Roll / pitch switch gain", 0.01, 0, 1)
 gen.add("rate_beta", double_t, 0, "Roll / pitch rate switch gain", 0.01, 0, 1)
 
