Inner loop position control SMC implemented

--- a/morus_msgs/CMakeLists.txt
+++ b/morus_msgs/CMakeLists.txt
@@ -9,6 +9,7 @@ add_message_files(
   PIDController.msg
   SMCStatusHeight.msg
   SMCStatusAttitude.msg
+  SMCStatusPosition.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs)
